tests/expectations/parser/program/hex_eof.out
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '[', '.', ';', '?', 'field', 'group', 'scalar', 'i8', 'i16', 'i32', 'i64', 'i128', 'u8', 'u16', 'u32', 'u64', 'u128', 'as' -- found 'x'
    --> test:3:32
     |
   3 |     function main() { let a = 0x}
     |                                ^
